tests/lean/fail/failed_lemma.lean
lemma wrong : false := by tactic.failed
